--- a/literature.bib
+++ b/literature.bib
@@ -224,3 +224,13 @@ url = { http://proceedings.mlr.press/v97/aivodji19a.html }
   pages = {18-22},
   url = {https://CRAN.R-project.org/doc/Rnews/},
 }
+
+@article{2-5-explanations,
+  author={Plumb, Gregory and Molitor, Denali and Talwalkar, Ameet},
+  year={2019},
+  title={Model Agnostic Supervised Local Explanations},
+  archivePrefix={arXiv},
+  eprint={1807.02910},
+  url={https://arxiv.org/abs/1807.02910}
+}
+
